--- a/style.css
+++ b/style.css
@@ -10,7 +10,34 @@ body {
 h1 {
     text-align: center;
     font-size: xx-large;
-    border-style: solid;
-    border-width: 2px;
+    border-bottom: solid;
 
+}
+
+.navbar ul{
+    list-style-type: none;
+    background-color: rgb(24, 27, 43);
+    padding: 0px; 
+    margin: 0px;
+    overflow: hidden; 
+}
+
+.navbar a {
+    color: white;
+    text-decoration: none;
+    padding:15px; 
+    display: block;
+    text-align: center;
+}
+
+.navbar a:hover {
+    background-color: rgb(59, 64, 104);
+}
+
+.navbar li{
+    float: left; 
+}
+
+body{
+    margin:10px; 
 }
